--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://nhathoa22:18102018nhathoa@cluster0.kxofuma.mongodb.net/shop_DB?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://nhathoa22:18102018nhathoa@cluster0.kxofuma.mongodb.net/finalProject?retryWrites=true&w=majority
