--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT = 5000
+PORT = 3500
 MONGO_URL = mongodb+srv://nhathoa22:18102018nhathoa@cluster0.kxofuma.mongodb.net/finalProject?retryWrites=true&w=majority
+ACCESS_TOKEN = 123456
