--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3500
 MONGO_URL = mongodb+srv://nhathoa22:18102018nhathoa@cluster0.kxofuma.mongodb.net/finalProject?retryWrites=true&w=majority
-USER_TOKEN = 123456
+USER_TOKEN = normalUser
+SELLER_TOKEN = adminUser
+NODE_ENV = development
